# security-observability-cluster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  CHANGELOG.md  README.md  TESTING_AND_USAGE.md  apps.tf  backend.hcl  docker-compose.yml  main.tf  observability.tf  outputs.tf  package-lock.json  package.json  providers.tf  security.tf  terraform.tfvars  variables.tf  versions.tf
.github/scripts/: sync-cluster-admin-arns.sh
.github/workflows/: deploy-infrastructure.yml  publish-backend-image.yml  publish-frontend-image.yml  quality.yml  release.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  default_managed_config.json  events.py  main.py  models.py  run_messages.py  run_service.py  runner_main.py  store.py  terraform_runner.py
backend/isolens_control_plane.egg-info/: PKG-INFO  SOURCES.txt
backend/kubeguardian_control_plane.egg-info/: PKG-INFO  SOURCES.txt
bootstrap/: outputs.tf  providers.tf  variables.tf
docs/: CONTRIBUTING.md
frontend/: Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf.template  package-lock.json  package.json  run-nginx.sh  tailwind.config.ts
frontend/src/: App.tsx  index.css
infrastructure/: .gitignore  iam.tf  locals.tf  main.tf  observability.tf  providers.tf  terraform.tfvars
infrastructure/applications/: .terraform.lock.hcl  README.md  compatibility_variables.tf  main.tf  outputs.tf  (+2 more)
tooling/: commitlint.config.mjs  releaserc.json  terraform-docs-modules.yml  terraform-docs.yml  tflint.hcl
(+114 files in other folders)
