[project]
name = "kubeguardian-control-plane"
version = "0.1.0"
description = "FastAPI control plane for Terraform-driven KubeGuardian operations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
